--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,6 @@
+/*Síguenos en todas las redes como:*/
+/*Faster Academy*/
+/*Código: Daniel Arteaga de Faster Academy*/
 body {
   background-color: #000;
   margin: 0;
@@ -22,7 +25,9 @@ body {
   /* Agrega una animación de pulsación */
   animation: pulsate 2s infinite;
 }
-
+/*Síguenos en todas las redes como:*/
+/*Faster Academy*/
+/*Código: Daniel Arteaga de Faster Academy*/
 .text-above,
 .text-below {
     position: absolute;
@@ -62,7 +67,9 @@ body {
   
     filter: drop-shadow(0 0 8px #682600);
   }
-  
+/*Síguenos en todas las redes como:*/
+/*Faster Academy*/
+/*Código: Daniel Arteaga de Faster Academy*/
   .Petal1 {
     position: absolute;
     left: 40px;
@@ -131,7 +138,9 @@ body {
   
     filter: drop-shadow(0 0 2px #fbd702);
   }
-  
+/*Síguenos en todas las redes como:*/
+/*Faster Academy*/
+/*Código: Daniel Arteaga de Faster Academy*/
   .Petal3.p1 {
     transform: rotate(22.5deg);
   }
@@ -144,3 +153,6 @@ body {
   .Petal3.p4 {
     transform: rotate(157.5deg);
   }
+/*Síguenos en todas las redes como:*/
+/*Faster Academy*/
+/*Código: Daniel Arteaga de Faster Academy*/
